[gd_scene load_steps=6 format=2]

[ext_resource path="res://gfx/UI/Fonts/AmaticSC-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src_and_scenes/ResultScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="ResultScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.384314, 0.360784, 0.360784, 0.803922 )

[node name="TitleMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = 200.0
margin_right = 301.0
margin_bottom = -438.0
custom_fonts/font = SubResource( 1 )
text = "Apple"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -30.0
margin_right = 416.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Banana"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = 448.0
margin_right = 98.0
margin_bottom = -205.0
custom_fonts/font = SubResource( 3 )
text = "Retry"

[node name="NextButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = 533.0
margin_right = 98.0
margin_bottom = -120.0
custom_fonts/font = SubResource( 3 )
text = "Next Level"

[node name="LevelShowTimer" type="Timer" parent="."]

[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="timeout" from="LevelShowTimer" to="." method="_on_LevelShowTimer_timeout"]
